--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
 	<head>
-		<title>GW CS Senior Design FILL-IN-YOUR-NAME</title>
+		<title>GW CS Senior Design - Andy Acosta</title>
 		<style>
 		body {
 	background-color: #005A81;
@@ -62,27 +62,27 @@ a {
 	<body>
 		<div id="header_div">
 			<p>
-			<a href="https://capstone.cs.gwu.edu/">GW CS Senior Design</a> FILL-IN-YOUR-GRADUATION-YEAR
+			<a href="https://capstone.cs.gwu.edu/">GW CS Senior Design</a> 2017
 			</p>
 		</div>
 		<div id="outer_div">
 			<div id="middle_div">
 				<div class="subheader_div">
-					<h2>FILL-IN YOUR NAME: PROJECT TITLE</h2>
-					<img src="images/headshot.jpg" width="150">
+					<h2>Andy Acosta: ASL Keyword to Sentence</h2>
+					<img src="images/me.jpg" width="150">
 				</div>
 				<div id="inside_div"> 
 					<p>
-						FILL-IN YOUR PROJECT OVERVIEW.
+						ASL Keyword to Sentence is an interface to help making signing easier for individual ASL users and convert a string of keywords into full sentences. The first component involves using a hand-gesture recognition device (the Myo Armband) to learn ASL signs and be able to convert these gestures into text. The second component involves converting keywords to full sentences (i.e. "take dog outside" will convert to "I will take the dog outside"). Together these two components will help ASL signers to make any ASL-text conversion much easier.
 					</p> 
 					<p>
 						<strong>Bio:</strong>
-						FILL-IN YOUR BIO 
+						Andy Acosta is a senior at George Washington University, majoring in Computer Science with a minor in Political Science. She works in the CRM Database Management team for the Washington Wizards, Capitals, and Mystics. After graduation, Andy will stay in the D.C. area to figure out what she wants to do with her life.
 					</p>
 					<p>
 						<strong>Documentation:</strong> 							
 						<ul>
-							FILL-IN LINKS TO EACH OF YOUR WRITING AND DESIGN DOCS (store them in the docs/ folder)
+							No docs yet :(
 						</ul>
 
 						<!--
