--- a/index.html
+++ b/index.html
@@ -68,32 +68,32 @@ a {
 		<div id="outer_div">
 			<div id="middle_div">
 				<div class="subheader_div">
-					<h2>Andy Acosta: ASL Keyword to Sentence</h2>
+					<h2>Andy Acosta: MyoSign</h2>
 					<img src="images/me.jpg" width="150">
 				</div>
 				<div id="inside_div"> 
 					<p>
-						ASL Keyword to Sentence is an interface to help making signing easier for individual ASL users and convert a string of keywords into full sentences. The first component involves using a hand-gesture recognition device (the Myo Armband) to learn ASL signs and be able to convert these gestures into text. The second component involves converting keywords to full sentences (i.e. "take dog outside" will convert to "I will take the dog outside"). Together these two components will help ASL signers to make any ASL-text conversion much easier.
+						MyoSign is a project that uses a <a href="www.myo.com">Myo Armband</a>, a gesture recognition device, to translate American Sign Language signs onto a user's screen.
 					</p> 
 					<p>
 						<strong>Bio:</strong>
-						Andy Acosta is a senior at George Washington University, majoring in Computer Science with a minor in Political Science. She works in the CRM Database Management team for the Washington Wizards, Capitals, and Mystics. After graduation, Andy will stay in the D.C. area to figure out what she wants to do with her life.
+						Andy Acosta is a senior at George Washington University, majoring in Computer Science with a minor in Political Science. After graduation, she will stay in the DC area, working in the CRM Department of Monumental Sports and Entertainment.
 					</p>
 					<p>
 						<strong>Documentation:</strong> 							
 						<ul>
-							No docs yet :(
+							<li><a href="./docs/FinalSBIRPaper.docx">Final SBIR Grant Proposal</a></li>
+							<li><a href="./docs/DesignDocument.docx">Design Document</a></li>
 						</ul>
 
-						<!--
-						<iframe 
-							width="420" 
+						
+						<iframe width="420" 
 							height="315"
-							src="FILL-IN YOUR YOUTUBE LINK at end of year and uncomment" 
+							src="https://www.youtube.com/watch?v=djnTjoyBedY" 
 							frameborder="0" 
 							allowfullscreen>
 						</iframe>
-						!-->
+						
 					</p>
 				</div>
 			</div>
