--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@ a {
 		<div id="outer_div">
 			<div id="middle_div">
 				<div class="subheader_div">
-					<h2>Andy Acosta: MyoSign</h2>
+					<h2>Andy Acosta: ASL Keyword to Sentence</h2>
 					<img src="images/me.jpg" width="150">
 				</div>
 				<div id="inside_div"> 
 					<p>
-						MyoSign is a project that uses a <a href="www.myo.com">Myo Armband</a>, a gesture recognition device, to translate American Sign Language signs onto a user's screen.
+						MyoSign is a project that uses a gesture recognition device to convert American Sign Language (ASL) to a text sentence. This project is meant to help deaf and hearing disabled individuals convert signs, in ASL, to sentences that can be read by anyone. The goal of this project is to provide a device that can be trained to learn new gestures and also recognize what gesture is being signed by the user. In order to achieve this goal, a gesture recognition device, which in this case is the Myo Armband, will be manipulated to take the electromyographic data from the device to be able to train and create a new gesture.
 					</p> 
 					<p>
 						<strong>Bio:</strong>
-						Andy Acosta is a senior at George Washington University, majoring in Computer Science with a minor in Political Science. After graduation, she will stay in the DC area, working in the CRM Department of Monumental Sports and Entertainment.
+						Andy Acosta is a senior at George Washington University, majoring in Computer Science with a minor in Political Science. After graduation, she will continue working full time in the CRM Department with Monumental Sports and Entertainment.
 					</p>
 					<p>
 						<strong>Documentation:</strong> 							
@@ -86,14 +86,13 @@ a {
 							<li><a href="./docs/DesignDocument.docx">Design Document</a></li>
 						</ul>
 
-						
-						<iframe width="420" 
+						<iframe 
+							width="420" 
 							height="315"
-							src="https://www.youtube.com/watch?v=djnTjoyBedY" 
+							src="https://www.youtube.com/embed/djnTjoyBedY" 
 							frameborder="0" 
 							allowfullscreen>
 						</iframe>
-						
 					</p>
 				</div>
 			</div>
