--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ a {
 		<div id="outer_div">
 			<div id="middle_div">
 				<div class="subheader_div">
-					<h2>Andy Acosta: ASL Keyword to Sentence</h2>
+					<h2>Andy Acosta: MyoSign</h2>
 					<img src="images/me.jpg" width="150">
 				</div>
 				<div id="inside_div"> 
