--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@ a {
 					<p>
 						<strong>Documentation:</strong> 							
 						<ul>
-							<li><a href="./docs/FinalSBIRPaper.docx">Final SBIR Grant Proposal</a></li>
-							<li><a href="./docs/DesignDocument.docx">Design Document</a></li>
+							<li><a href="https://github.com/gw-cs-sd/sd-2017-asl-keyword-to-sentence/blob/gh-pages/docs/Final%20SBIR%20Grant.docx">Final SBIR Grant Proposal</a></li>
+							<li><a href="https://github.com/gw-cs-sd/sd-2017-asl-keyword-to-sentence/blob/gh-pages/docs/DesignDocument.pdf">Design Document</a></li>
+							<li><a href="https://github.com/gw-cs-sd/sd-2017-asl-keyword-to-sentence/blob/gh-pages/docs/myoSignFinal.pptx.pdf">Presentation</a></li>
 						</ul>
 
 						<iframe 
